# mldevops_exercise

./: .pre-commit-config.yaml  pyproject.toml  sn_lab.py
