[tool.poetry]
name = "mldevops"
version = "0.1"
description = ""
authors = ["olivier <olivier@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
